--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -492,7 +492,7 @@
                                 <legend>매장 검색</legend>
                                 <div class="search_input">
                                     <label for="store_sch" class="skip">통합검색</label>
-                                    <input type="search" id="store_sch" placeholder="매장명을 검색해주세요" class="search_bar">
+                                    <input type="search" id="store_sch"  class="search_bar" placeholder="매장명을 검색해주세요">
                                 </div>
                                 <input type="submit" class="search_btn" value="검색">
                             </fieldset>
@@ -572,9 +572,9 @@
                     </div>
                 </div>
             </section>
-            <section class="media">
+            <section class="media clearfix">
                 <div class="wrap">
-                    <div class="notice">
+                    <div class="notice media_item">
                         <h2>공지사항</h2>
                         <ul>
                             <li>
@@ -598,7 +598,7 @@
                         </ul>
                         <a href="" class="more">전체보기</a>
                     </div>
-                    <div class="news">
+                    <div class="news media_item">
                         <h2>보도자료</h2>
                         <ul>
                             <li>
