메인레이아웃 scss

--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -512,6 +512,7 @@
             
             <section class="app">
                 <div class="wrap">
+                    <div class="img_box"><img src="./images/app_Img.png" alt="이마트24 앱 이미지"></div>
                     <div class="title_box">
                         <span>우주편의점</span>
                         <h2>“놀아 버는” 편의점<br>
