메인레이아웃 scss

--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -594,7 +594,11 @@
             </section>
             <section class="story">
                 <div class="wrap">
-                    <h2><em>이마트24</em>STORY</h2>
+                    <div class="title_box">
+                        <h2><em>이마트24</em>STORY</h2>
+                        <span>이마트24의 다양한 스토리를 확인해 보세요.</span>
+                    </div>
+                    
                     <ul class="sns_list">
                         <li class="youtube"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>유튜브
                                     바로가기</span></a></li>
