--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -37,19 +37,19 @@
     </div>
     <div id="wrapper">
         <header id="header">
-            <div class="logo">
+            <div class="header_top">
                 <div class="wrap">
-                    <a href=""><img src="./images/logo.png" alt="이마트24 로고"></a>
-                </div>
-            </div>
-            <div class="gnb">
-                <div class="wrap">
-                    <ul>
-                        <li><a href="">고객센터</a></li>
-                        <li><a href="">이마트24 소개</a></li>
-                        <li><a href="">채용안내</a></li>
-                        <li><a href="">전자 계약 시스템</a></li>
-                    </ul>
+                    <div class="logo">
+                        <a href=""><img src="./images/logo.png" alt="이마트24 로고"></a>
+                    </div>
+                    <div class="gnb">
+                        <ul>
+                            <li><a href="">고객센터</a></li>
+                            <li><a href="">이마트24 소개</a></li>
+                            <li><a href="">채용안내</a></li>
+                            <li><a href="">전자 계약 시스템</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="lnb">
