비즈니스 섹션 애니메이션

--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -533,7 +533,7 @@
                         </li>
                         <li class="n2">
                             <a href="">
-                                <i class="icon"></i>
+                                <i class="icon"><img src="./images/found2.png" alt=""></i>
                                 <div class="title">창업 설명회</div>
                                 <p>경영주와 함께 하는 <br>창업 설명회를 신청하세요.
                                 </p>
