--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -594,23 +594,24 @@
                     </div>
                 </div>
             </section>
-            <section class="story">
+            <section class="story clearfix">
                 <div class="wrap">
                     <div class="title_box">
                         <h2><em>이마트24</em>STORY</h2>
                         <span>이마트24의 다양한 스토리를 확인해 보세요.</span>
+                        <ul class="sns_list">
+                            <li class="youtube"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>유튜브
+                                        바로가기</span></a></li>
+                            <li class="insta"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>인스타그램
+                                        바로가기</span></a></li>
+                            <li class="facebook"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>페이스북
+                                        바로가기</span></a></li>
+                            <li class="tictok"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>틱톡
+                                        바로가기</span></a></li>
+                        </ul>
                     </div>
                     
-                    <ul class="sns_list">
-                        <li class="youtube"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>유튜브
-                                    바로가기</span></a></li>
-                        <li class="insta"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>인스타그램
-                                    바로가기</span></a></li>
-                        <li class="facebook"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>페이스북
-                                    바로가기</span></a></li>
-                        <li class="tictok"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>틱톡
-                                    바로가기</span></a></li>
-                    </ul>
+                    
                     <div class="sns_slide">
                         <div class="slide_list">
                             <div class="slide_item insta">
@@ -649,6 +650,34 @@
                                     </div>
                                 </a>
                             </div>
+                            <div class="slide_item youtube">
+                                <a href="">
+                                    <div class="img_box"><span style="background-image:url(./images/sns2.png);"></span>
+                                    </div>
+                                    <div class="text_box">
+                                        <div class="title">
+                                            <span>YOUTUBE</span>
+                                            <p>[단독] 래원, 회사에서 게임하다 직원들과 결국.....더욱 돈독..💛</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="slide_item insta">
+                                <a href="">
+                                    <div class="img_box"><span style="background-image:url(./images/sns3.png);"></span>
+                                    </div>
+                                    <div class="text_box">
+                                        <div class="title">
+                                            <span>INSTAGRAM</span>
+                                            <p>프로 운동러들 모여라! 프로틴 N+1 상품 모음😎</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="control_box">
+                            <button type="button" class="prev">이전</button>
+                            <button type="button" class="next">다음</button>
                         </div>
                     </div>
                 </div>
