메인레이아웃 scss

--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -255,7 +255,7 @@
                 </div>
 
             </section>
-            <section class="event">
+            <section class="event scroll_ani">
                 <!-- 슬라이드가 자동롤링이면 멈춤버튼이 있어야 접근성위배가 안된다고 들었는데? -->
                 <div class="wrap">
                     <h2>2월 행사 상품</h2>
@@ -460,7 +460,7 @@
                     <a href="" class="more"><span>전체보기</span></a>
                 </div>
             </section>
-            <section class="only_emart">
+            <section class="only_emart scroll_ani">
                 <div class="wrap">
                     <div class="title_box">
                         <h2>ONLY 이마트24</h2>
@@ -517,7 +517,7 @@
                     </div>
                 </div>
             </section>
-            <section class="buisness">
+            <section class="buisness scroll_ani">
                 <div class="wrap">
                     <div class="title_box">
                         <h2>창업 안내</h2>
@@ -550,7 +550,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="store">
+            <section class="store scroll_ani">
                 <div class="wrap">
                     <h2>매장찾기</h2>
                     <div class="search">
@@ -577,7 +577,7 @@
                 </div>
             </section>
 
-            <section class="app">
+            <section class="app scroll_ani">
                 <div class="wrap">
                     <div class="img_box"><img src="./images/app_Img.png" alt="이마트24 앱 이미지"></div>
                     <div class="text_box">
@@ -594,7 +594,7 @@
                     </div>
                 </div>
             </section>
-            <section class="story clearfix">
+            <section class="story scroll_ani clearfix ">
                 <div class="wrap">
                     <div class="title_box">
                         <h2><em>이마트24</em>STORY</h2>
@@ -613,15 +613,16 @@
                     
                     
                     <div class="sns_slide">
-                        <div class="slide_list">
+                        <div class="slide_list even">
                             <div class="slide_item insta">
                                 <a href="">
                                     <div class="img_box"><span style="background-image:url(./images/sns1.png);"></span>
                                     </div>
                                     <div class="text_box">
                                         <div class="title">
+                                            <i class="icon"></i>
                                             <span>INSTAGRAM</span>
-                                            <p>⠀지구인들! 이번 주 신상배달 기다렸둥?🙈</p>
+                                            <p>지구인들! 이번 주 신상배달 기다렸둥?🙈</p>
                                         </div>
                                     </div>
                                 </a>
@@ -632,6 +633,7 @@
                                     </div>
                                     <div class="text_box">
                                         <div class="title">
+                                            <i class="icon"></i>
                                             <span>YOUTUBE</span>
                                             <p>[단독] 래원, 회사에서 게임하다 직원들과 결국.....더욱 돈독..💛</p>
                                         </div>
@@ -644,6 +646,7 @@
                                     </div>
                                     <div class="text_box">
                                         <div class="title">
+                                            <i class="icon"></i>
                                             <span>INSTAGRAM</span>
                                             <p>프로 운동러들 모여라! 프로틴 N+1 상품 모음😎</p>
                                         </div>
@@ -656,6 +659,7 @@
                                     </div>
                                     <div class="text_box">
                                         <div class="title">
+                                            <i class="icon"></i>
                                             <span>YOUTUBE</span>
                                             <p>[단독] 래원, 회사에서 게임하다 직원들과 결국.....더욱 돈독..💛</p>
                                         </div>
@@ -668,6 +672,7 @@
                                     </div>
                                     <div class="text_box">
                                         <div class="title">
+                                            <i class="icon"></i>
                                             <span>INSTAGRAM</span>
                                             <p>프로 운동러들 모여라! 프로틴 N+1 상품 모음😎</p>
                                         </div>
@@ -682,7 +687,7 @@
                     </div>
                 </div>
             </section>
-            <section class="media clearfix">
+            <section class="media scroll_ani clearfix">
                 <div class="wrap">
                     <div class="notice media_item">
                         <h2>공지사항</h2>
