풋터헤더 반응형 scss

--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -50,6 +50,9 @@
                             <li><a href="">전자 계약 시스템</a></li>
                         </ul>
                     </div>
+                    <div class="menu_show">
+                        <button type="button" class="menu_button">메뉴열기</button>
+                    </div>
                 </div>
             </div>
             <div class="lnb">
