--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="lnb">
-                <div class="lnb_topbox"></div>
+                <div class="lnb_topbox"><a href=""><img src="./images/logo_white.png" alt=""></a></div>
                 <nav class="menu after pulldown">
                     <h2 class="skip">메뉴</h2>
                     <div class="depth depth1">
@@ -131,6 +131,13 @@
                         </ul>
                     </div>
                 </nav>
+                <div class="lnb_link">
+                    <ul>
+                        <li><a href="">고객센터</a></li>
+                        <li><a href="">이마트24 소개</a></li>
+                        <li><a href="">채용안내</a></li>
+                    </ul>
+                </div>
                 <div class="menu_hide">
                     <button type="button" class="menu_button">메뉴 닫기</button>
                 </div>
