원더플레이스 css 정리

--- a/스터디_2023/프로젝트/원더플레이스/main.html
+++ b/스터디_2023/프로젝트/원더플레이스/main.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="./css/defalut.css">
     <link rel="stylesheet" type="text/css" href="./css/common.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="./js/jquery-1.12.4.HS-20200709.min.js"></script>
+    <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery.screen.min.js"></script>
     <script src="./js/slick.min.custom.1.6.0.10.js"></script>
     <script src="./js/slick.extensions.min.js"></script>
@@ -99,25 +99,22 @@
                 <div class="slide_list">
                     <div class="slide_item">
                         <a href="">
-                            <span class="slide_pc" style="background-image:url(./images/visual01.png);">슬라이드
-                                대체텍스트</span>
+                            <span class="img_box" style="background-image:url(./images/bg01.jpg);">슬라이드 대체텍스트</span>
                         </a>
                     </div>
                     <div class="slide_item">
                         <a href="">
-                            <span class="slide_pc" style="background-image:url(./images/visual02.png);">슬라이드
-                                대체텍스트</span>
+                            <span class="img_box" style="background-image:url(./images/bg02.jpg);">슬라이드 대체텍스트</span>
                         </a>
                     </div>
                     <div class="slide_item">
                         <a href="">
-                            <span class="slide_pc" style="background-image:url(./images/visual02.png);">슬라이드
-                                대체텍스트</span>
+                            <span class="img_box" style="background-image:url(./images/bg03.jpg);">슬라이드 대체텍스트</span>
                         </a>
                     </div>
                 </div>
                 <div class="slide_control">
-                    <button type="button" class="auto">멈춤</button>
+                    <button type="button" class="prev">이전</button>
                     <button type="button" class="next">다음</button>
                 </div>
                 <div class="dots"></div>
