--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="./css/defalut.css">
     <link rel="stylesheet" type="text/css" href="./css/common.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="./js/jquery-1.12.4.HS-20200709.min.js"></script>
+    <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery.screen.min.js"></script>
     <script src="./js/slick.min.custom.1.6.0.10.js"></script>
     <script src="./js/slick.extensions.min.js"></script>
