--- a/스터디_2023/프로젝트/원더플레이스/main.html
+++ b/스터디_2023/프로젝트/원더플레이스/main.html
@@ -45,13 +45,16 @@
                 </div>
             </div>
             <div class="gnb">
-                <ul>
-                    <li><a href=""><span>COMPANY</span></a></li>
-                    <li><a href=""><span>RECRUIT</span></a></li>
-                    <li><a href=""><span>BRAND</span></a></li>
-                    <li><a href=""><span>SHOP</span></a></li>
-                    <li><a href=""><span>CONTACT</span></a></li>
-                </ul>
+                <div class="wrap">
+                    <ul>
+                        <li><a href=""><span>COMPANY</span></a></li>
+                        <li><a href=""><span>RECRUIT</span></a></li>
+                        <li><a href=""><span>BRAND</span></a></li>
+                        <li><a href=""><span>SHOP</span></a></li>
+                        <li><a href=""><span>CONTACT</span></a></li>
+                    </ul>
+                </div>
+                
             </div>
             <div class="lnb">
                 <div class="slogan">
