text animation scss

--- a/스터디_2023/프로젝트/원더플레이스/main.html
+++ b/스터디_2023/프로젝트/원더플레이스/main.html
@@ -90,6 +90,18 @@
             </div>
         </header>
         <main id="container">
+            <section class="util">
+                <div class="sns">
+                    <ul>
+                        <li class="facebook"><a href="" title="새창" target="_blank">원더플레이스 페이스북 바로가기</a></li>
+                        <li class="insta"><a href="" title="새창" target="_blank">원더플레이스 인스타그램 바로가기</a></li>
+                        <li class="youtube"><a href="" title="새창" target="_blank">원더플레이스 유튜브 바로가기</a></li>
+                    </ul>
+                </div>
+                <div class="bottom_btn">
+                    <button type="button">about 바로가기</button>
+                </div>
+            </section>
             <section class="visual">
                 <h2 class="skip">비주얼 슬라이드</h2>
                 <div class="wrap">
@@ -153,6 +165,10 @@
                         <img src="./images/pic_about1.png" alt="원더플레이스는 TRENDY, FRESH, SEASONAL ESSENTIAL, UNIQUE를 추구합니다.">
                     </div>
                 </div>
+            </section>
+            <section class="title_ani">
+                <p class="t1">A PLACE OF WONDER  A PLACE OF WONDER</p>
+                <p class="t2">A PLACE OF WONDER  A PLACE OF WONDER</p>
             </section>
             <section class="brand">
                 <div class="wrap">
@@ -230,13 +246,7 @@
                     </div>
                 </div>
             </section>
-            <section class="sns">
-                <ul>
-                    <li class="facebook"><a href="" title="새창" target="_blank">원더플레이스 페이스북 바로가기</a></li>
-                    <li class="insta"><a href="" title="새창" target="_blank">원더플레이스 인스타그램 바로가기</a></li>
-                    <li class="youtube"><a href="" title="새창" target="_blank">원더플레이스 유튜브 바로가기</a></li>
-                </ul>
-            </section>
+            
         </main>
         <!-- //#container -->
         <footer id="footer">
