--- a/스터디_2023/프로젝트/원더플레이스/main.html
+++ b/스터디_2023/프로젝트/원더플레이스/main.html
@@ -148,7 +148,7 @@
                 
 
             </section>
-            <section class="about">
+            <section class="about scroll_ani">
                 <div class="wrap">
                     <div class="title_box">
                         <h2>ABOUT</h2>
@@ -170,7 +170,7 @@
                 <p class="t1">A PLACE OF WONDER  A PLACE OF WONDER</p>
                 <p class="t2">A PLACE OF WONDER  A PLACE OF WONDER</p>
             </section>
-            <section class="brand">
+            <section class="brand scroll_ani">
                 <div class="wrap">
                     <div class="title_box">
                         <h2>BRAND</h2>
@@ -251,45 +251,46 @@
         <!-- //#container -->
         <footer id="footer">
             <div class="wrap">
-         
-                <div class="footer_sns">
-                    <ul>
-                        <li class="facebook"><a href="" title="새창" target="_blank">원더플레이스 페이스북 바로가기</a></li>
-                        <li class="insta"><a href="" title="새창" target="_blank">원더플레이스 인스타그램 바로가기</a></li>
-                        <li class="youtube"><a href="" title="새창" target="_blank">원더플레이스 유튜브 바로가기</a></li>
-                    </ul>
+                <div class="footer_wrap">
+                    <div class="footer_sns">
+                        <ul>
+                            <li class="facebook"><a href="" title="원더플레이스 페이스북 바로가기" target="_blank">Facebook</a></li>
+                            <li class="insta"><a href="" title="원더플레이스 인스타그램 바로가기" target="_blank">instagram</a></li>
+                            <li class="youtube"><a href="" title="원더플레이스 유튜브 바로가기" target="_blank">Youtube</a></li>
+                        </ul>
+                    </div>
+                    <div class="copyright">
+                        <span>COPYRIGHT</span>
+                        <b>© WONDERPLACE</b>
+                        <span>ALL RIGHTS RESERVED.</span>
+                    </div>
+                    <div class="footer_contact">
+                        <ul>
+                            <li>
+                                <span class="title">TEL</span>
+                                <a href="tel:1668-3508">1668-3508</a>
+                            </li>
+                            <li>
+                                <span class="title">E-MAIL</span>
+                                <a href="mailto:help@wonderplace.co.kr">help@wonderplace.co.kr</a>
+                            </li>
+                            <li>
+                                <span class="title">ADDRESS</span>
+                                <span>04782 서울특별시 성동구 성수일로6길 33 (성수동2가) <br>아연디지털타워 5층</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer_info">
+                        <ul>
+                            <li><a href="https://wdp01.cafe24.com/shop2/member/privacy.html">개인정보처리방침</a></li>
+                            <li>대표이사 : 김영한</li>
+                            <li>사업자 등록번호 : 201-86-20597</li>
+                        </ul>
+                      </div>
                 </div>
-                <div class="copyright">
-                    <span>COPYRIGHT</span>
-                    <b>© WONDERPLACE</b>
-                    <span>ALL RIGHTS RESERVED.</span>
-                </div>
-                <div class="footer_contact">
-                    <ul>
-                        <li>
-                            <span>TEL</span>
-                            <a href="tel:1668-3508">1668-3508</a>
-                        </li>
-                        <li>
-                            <span>E-MAIL</span>
-                            <a href="mailto:help@wonderplace.co.kr">help@wonderplace.co.kr</a>
-                        </li>
-                        <li>
-                            <span>ADDRESS</span>
-                            <span>04782 서울특별시 성동구 성수일로6길 33 (성수동2가) 아연디지털타워 5층</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer_info">
-                    <ul>
-                        <li><a href="https://wdp01.cafe24.com/shop2/member/privacy.html">개인정보처리방침</a></li>
-                        <li>대표이사 : 김영한</li>
-                        <li>사업자 등록번호 : 201-86-20597</li>
-                    </ul>
-                  </div>
             </div>
             <div class="top_btn">
-                <button type="button">맨 위로</button>
+                <a href="#container">맨 위로</a>
             </div>
         </footer>
     </div>
