--- a/스터디_2023/프로젝트/원더플레이스/main.html
+++ b/스터디_2023/프로젝트/원더플레이스/main.html
@@ -243,7 +243,7 @@
                     </div>
                 </div>
             </section>
-            
+            <section>깃에서 충돌나면 어떻게 되는지 테스트 해보겠습니다.</section>
         </main>
         <!-- //#container -->
         <footer id="footer">
